--- a/style.css
+++ b/style.css
@@ -166,11 +166,11 @@ hr{
 
 }
 .thirdSection .education .masters{
-    width: 250px;
+    width: 300px;
     height: 250px;
     /* margin: 30px; */
     border: 2px solid #067857;
-    padding: 30px 0 0 0;
+    padding: 30px 10px 0 10px;
     background-color: rgb(71, 50, 168);
 }
 
@@ -202,7 +202,7 @@ hr{
 }
 
 .fourthSection .profileLink{
-    margin-top: 50px;
+    margin-top: 30px;
     display: flex;
     /* border: 2px solid black; */
     justify-content:space-evenly;
